@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2830 2004/04/25 08:16:15 vouchcac Exp $
+ * $Id: ChangeLog,v 1.2831 2004/04/25 11:26:00 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-04-26 07:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * source/rtl/gtwvt/gtwvt.c
+    ! add definition of IDC_HAND to allow compilation when WINVER < 0x0500
+
 2004-04-25 18:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * contrib/winprn/tprint.prg
     ! major changes on font data collecting routine to permit usage of
